# iwr6843aop_pub

./: README.md  package.xml  setup.cfg  setup.py
cfg_files/: 30deg_Group_18m_30Hz.cfg  30deg_Group_50m_30Hz.cfg  30deg_noGroup_18m_30Hz.cfg  30deg_noGroup_50m_30Hz.cfg  90deg_Group_18m_30Hz.cfg  90deg_Group_50m_30Hz.cfg  90deg_noGroup_18m_30Hz.cfg  90deg_noGroup_50m_30Hz.cfg  xwr68xx_profile.cfg  xwr68xx_profile_30Hz.cfg
iwr6843aop_pub/: profile_scatter.cfg  publisher_member_function (copy).py  publisher_member_function.py  xwr68xx_AOP_profile_2021_03_24T15_38_17_858.cfg
launch/: default_parameters.launch.py
